2009-06-17  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* uri.cpp: Add a null check to prevent a crash.

2009-06-17  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* uri.cpp: Flag a lot more characters as url unsafe, and 
	fix printf specifiers for url encoded characters to not 
	include extra 'ff' sequences for every encoded character.

	This fixes parts of MS DRT #641.

2009-06-17  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* downloader.cpp|h: Add an Open overload which takes an Uri
	instead of a string.

	* deepzoomimagetilesource.cpp:
	* bitmapimage.cpp: Use the Uri overload of Downloader::Open.

2009-06-17  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* playlist.cpp: When we stop, emit the StopEvent.

	* mediaelement.cpp: Don't return a CurrentPosition > NaturalDuration.

2009-06-16  Chris Toshok  <toshok@ximian.com>

	* xaml.cpp (XamlElementInfoStaticResource,
	XamlElementInstanceStaticResource): remove these classes.
	(begin_buffering_element_names): remove this unused variable.
	(XamlParserInfo::LookupNamedResource): remove.
	(DefaultNamespace::FindElement): remove the
	XamlElementInfoStaticResource case, and just let the managed
	loader create the StaticResource element itself.
	(is_static_resource_element): remove.
	(XamlElementInstanceNative::SetProperty): defer to the loader if
	either the property or the value RequiresManagedSet.
	(dependency_object_set_property): defer to the loader if the value
	RequiresManagedSet.
	(dependency_object_set_attributes): remove all processing of
	markup extensions from unmanaged code.
	(xaml_markup_parse_argument): remove.
	(xaml_markup_extension_type): remove.
	(handle_markup_in_managed): remove.
	(handle_xaml_markup_extension): remove.
	
	* panel.h|cpp (Panel::Panel): just set our subtree object here.
	(Panel::GetSubtreeObject): remove.
	
	* provider.cpp (AutoCreatePropertyValueProvider::GetPropertyValue):
	don't notify listeners when creating an auto-created value.
