@@ -1,3 +1,8 @@
+2009-06-17  Alan McGovern  <amcgovern@novell.com>
+
+	* runtime.cpp: A subset of keypresses are allowed to bubble up
+	  when in fullscreen mode. Fixes drt 175.
+
 2009-06-17  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* uri.cpp: Add a null check to prevent a crash.
